@@ -26,6 +26,7 @@ Release 0.9.5 on 2022-07-30
   * New frame attribute 'content_geometry'
   * New tag attribute 'at_end'
   * New monitor attribute 'content_geometry'
+  * New attribute 'panels.geometry_fallback'
   * Fix bug in ipc protocol for big-endian systems
 
 Release 0.9.4 on 2022-03-16
